--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -5,4 +5,5 @@ spring.thymeleaf.cache=false
 
 search.api.key=${SEARCH_API_KEY}
 llm.api.key=${LLM_API_KEY}
-llm.model=gemini-2.5-flash
+llm.model=gemini-2.0-flash-lite
+#llm.model=gemini-2.5-flash
