timeout 수정 Jsoup, Gemini api 비동기 처리 Gemini 비동기 이유 : timeout 걸기 위해

--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -2,6 +2,7 @@ spring.application.name=ai-search
 server.port=8080
 spring.thymeleaf.cache=false
 
+spring.profiles.active=dev
 
 search.api.key=${SEARCH_API_KEY}
 llm.api.key=${LLM_API_KEY}
