--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
 
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
+
 }
 
 tasks.named('test') {
