application-prod.yml, application-dev.yml
spring:
  profiles:
    active:
    삭제

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,9 +1,9 @@
 # application-dev.yml
-spring:
-  profiles:
-    active: dev
+search:
+  api:
+    key: ${SEARCH_API_KEY}
 
-logging:
-  level:
-    root: DEBUG
-    com.example.ai_search: DEBUG
+llm:
+  model: gemini-2.0-flash-lite
+  api:
+    key: ${LLM_API_KEY}
