Gemini 예외 발생 시 최대 2회까지 재시도(backoff) 후 fallback 문구를 반환 테스트 추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,4 +8,4 @@ llm:
   model: gemini-2.0-flash-lite
   api:
     key: ${LLM_API_KEY}
-  timeout-seconds: # Gemini 타임아웃
+  timeout-seconds: 12 # Gemini 타임아웃
