--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,3 +7,9 @@ llm:
   model: gemini-2.0-flash-lite
   api:
     key: ${LLM_API_KEY}
+
+spring:
+  cache:
+    cache-names: llmResultCache, sourceCache # LLM 답변 + 출처 캐시, 검색결과 캐시
+    caffeine:
+      spec: maximumSize=1000, expireAfterWrite=30m
