--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,3 +9,10 @@ llm:
   api:
     key: ${LLM_API_KEY}
   timeout-seconds: 12 # Gemini 타임아웃
+
+
+spring:
+  cache:
+    cache-names: llmResultCache, sourceCache # LLM 답변 + 출처 캐시, 검색결과 캐시
+    caffeine:
+      spec: maximumSize=1000, expireAfterWrite=30m
