--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation 'org.jsoup:jsoup:1.17.1'
     implementation("com.github.ben-manes.caffeine:caffeine:3.1.8")
     implementation("org.springframework.boot:spring-boot-starter-cache")
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // 🔹 Gemini Java SDK (commons-logging 제외)
     implementation('com.google.genai:google-genai:1.27.0') {
