--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -19,3 +19,11 @@ app:
 spring:
   cache:
     cache-names: sourceCache, llmResultCache,  # LLM 답변 + 출처 캐시, 검색결과 캐시
+    type: redis  # 전체 캐시 타입을 Redis로
+  data:
+    redis:
+      host: redis-17439.c11.us-east-1-3.ec2.cloud.redislabs.com
+      port: 17439
+      password: ${REDIS_PASSWORD}  # 없으면 이 줄 삭제
+#      ssl:
+#        enabled: true
