--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -23,8 +23,8 @@ spring:
     type: redis  # 전체 캐시 타입을 Redis로
   data:
     redis:
-      host: redis-17439.c11.us-east-1-3.ec2.cloud.redislabs.com
-      port: 17439
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
       password: ${REDIS_PASSWORD}  # 없으면 이 줄 삭제
 #      ssl:
 #        enabled: true
